{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 39,
  "lineage": "763c1f2f-8f80-6427-2826-f74b75accbfb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0598adf464c4ea6d1",
            "association_id": "eipassoc-08cad0833591055a1",
            "domain": "vpc",
            "id": "eipalloc-0598adf464c4ea6d1",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-019477ada01f396ac",
            "private_dns": "ip-172-17-8-29.ap-south-1.compute.internal",
            "private_ip": "172.17.8.29",
            "public_dns": "ec2-3-6-176-53.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.176.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "uber-nat-gw",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-nat-gw",
              "project": "uber"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04893cdb768d0f9ee",
            "arn": "arn:aws:ec2:ap-south-1:370200737204:instance/i-0df538c4cdcab6295",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df538c4cdcab6295",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "uber",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0024b098486bd25b5",
            "private_dns": "ip-172-17-122-82.ap-south-1.compute.internal",
            "private_ip": "172.17.122.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-019a0180fa3fa6f4f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0391e75962c41017f",
            "tags": {
              "Name": "uber-backend",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-backend",
              "project": "uber"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c9a30deeb9eced93"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.backend",
            "aws_subnet.private1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04893cdb768d0f9ee",
            "arn": "arn:aws:ec2:ap-south-1:370200737204:instance/i-0f80025bcf32245c5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f80025bcf32245c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "uber",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dc78e8cb997e54c6",
            "private_dns": "ip-172-17-22-156.ap-south-1.compute.internal",
            "private_ip": "172.17.22.156",
            "public_dns": "ec2-43-204-24-193.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.24.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0903a864e314ebba6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083063e4b53a1fd6a",
            "tags": {
              "Name": "uber-bastion",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-bastion",
              "project": "uber"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-092da135e289cdff5"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.bastion",
            "aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04893cdb768d0f9ee",
            "arn": "arn:aws:ec2:ap-south-1:370200737204:instance/i-065dbe24fb4078281",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065dbe24fb4078281",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "uber",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0305fcaa15daf1cfb",
            "private_dns": "ip-172-17-31-62.ap-south-1.compute.internal",
            "private_ip": "172.17.31.62",
            "public_dns": "ec2-52-66-206-110.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.206.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cba3d9643056da1a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083063e4b53a1fd6a",
            "tags": {
              "Name": "uber-frontend",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-frontend",
              "project": "uber"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a806e8a9bf4a446b"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.frontend",
            "aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:internet-gateway/igw-06a9db38687061d83",
            "id": "igw-06a9db38687061d83",
            "owner_id": "370200737204",
            "tags": {
              "Name": "uber"
            },
            "tags_all": {
              "Name": "uber"
            },
            "vpc_id": "vpc-0e275d40ec7a48df5"
          },
          "dependencies": [
            "aws_vpc.vpc-new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0598adf464c4ea6d1",
            "connectivity_type": "public",
            "id": "nat-01b735bc9d9613e69",
            "network_interface_id": "eni-019477ada01f396ac",
            "private_ip": "172.17.8.29",
            "public_ip": "3.6.176.53",
            "subnet_id": "subnet-083063e4b53a1fd6a",
            "tags": {
              "Name": "gw-NAT"
            },
            "tags_all": {
              "Name": "gw-NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public1",
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:route-table/rtb-069ea10b400a28049",
            "id": "rtb-069ea10b400a28049",
            "owner_id": "370200737204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01b735bc9d9613e69",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uber-private",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-private",
              "project": "uber"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e275d40ec7a48df5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public1",
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:route-table/rtb-08f44daa87ac29acf",
            "id": "rtb-08f44daa87ac29acf",
            "owner_id": "370200737204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a9db38687061d83",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uber-public",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-public",
              "project": "uber"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e275d40ec7a48df5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8ed38f226897746",
            "route_table_id": "rtb-069ea10b400a28049",
            "subnet_id": "subnet-0391e75962c41017f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c3debb6008d1bcf",
            "route_table_id": "rtb-069ea10b400a28049",
            "subnet_id": "subnet-076e3cbc066127032"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001d57fe56805c583",
            "route_table_id": "rtb-069ea10b400a28049",
            "subnet_id": "subnet-072388be33eaa839e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private3",
            "aws_subnet.public1",
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e0ad463a1cea2bf",
            "route_table_id": "rtb-08f44daa87ac29acf",
            "subnet_id": "subnet-083063e4b53a1fd6a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbe7d459fde93cc6",
            "route_table_id": "rtb-08f44daa87ac29acf",
            "subnet_id": "subnet-0701a47dbc52d3833"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1b92897440105be",
            "route_table_id": "rtb-08f44daa87ac29acf",
            "subnet_id": "subnet-0156775b8b1bc4b80"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public3",
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:security-group/sg-0c9a30deeb9eced93",
            "description": "allows 3306,22 conntection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9a30deeb9eced93",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-092da135e289cdff5"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a806e8a9bf4a446b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "backend",
            "name_prefix": "",
            "owner_id": "370200737204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uber-backend",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-backend",
              "project": "uber"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e275d40ec7a48df5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.frontend",
            "aws_vpc.vpc-new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:security-group/sg-092da135e289cdff5",
            "description": "allows 22 conntection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092da135e289cdff5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "370200737204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uber-bastion",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-bastion",
              "project": "uber"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e275d40ec7a48df5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:security-group/sg-0a806e8a9bf4a446b",
            "description": "allows 80,443,22 conntection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a806e8a9bf4a446b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-092da135e289cdff5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend",
            "name_prefix": "",
            "owner_id": "370200737204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uber-frontend",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-frontend",
              "project": "uber"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e275d40ec7a48df5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.vpc-new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:subnet/subnet-0391e75962c41017f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0391e75962c41017f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370200737204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-private1"
            },
            "tags_all": {
              "Name": "uber-private1"
            },
            "vpc_id": "vpc-0e275d40ec7a48df5"
          },
          "dependencies": [
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:subnet/subnet-076e3cbc066127032",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.128.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076e3cbc066127032",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370200737204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-private2"
            },
            "tags_all": {
              "Name": "uber-private2"
            },
            "vpc_id": "vpc-0e275d40ec7a48df5"
          },
          "dependencies": [
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:subnet/subnet-072388be33eaa839e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.17.160.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072388be33eaa839e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "370200737204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-private3"
            },
            "tags_all": {
              "Name": "uber-private3"
            },
            "vpc_id": "vpc-0e275d40ec7a48df5"
          },
          "dependencies": [
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:subnet/subnet-083063e4b53a1fd6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083063e4b53a1fd6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "370200737204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-public1"
            },
            "tags_all": {
              "Name": "uber-public1"
            },
            "vpc_id": "vpc-0e275d40ec7a48df5"
          },
          "dependencies": [
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:subnet/subnet-0701a47dbc52d3833",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0701a47dbc52d3833",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "370200737204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-public2"
            },
            "tags_all": {
              "Name": "uber-public2"
            },
            "vpc_id": "vpc-0e275d40ec7a48df5"
          },
          "dependencies": [
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:subnet/subnet-0156775b8b1bc4b80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.17.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0156775b8b1bc4b80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "370200737204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-public3"
            },
            "tags_all": {
              "Name": "uber-public3"
            },
            "vpc_id": "vpc-0e275d40ec7a48df5"
          },
          "dependencies": [
            "aws_vpc.vpc-new",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:370200737204:vpc/vpc-0e275d40ec7a48df5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-010a687e0f178f1a7",
            "default_route_table_id": "rtb-0daa58e222177e81b",
            "default_security_group_id": "sg-0b4819460ded5f5f1",
            "dhcp_options_id": "dopt-05dbbd4d6301c0b35",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e275d40ec7a48df5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0daa58e222177e81b",
            "owner_id": "370200737204",
            "tags": {
              "Name": "uber"
            },
            "tags_all": {
              "Name": "uber"
            }
          }
        }
      ]
    }
  ]
}